[tool.poetry]
name = "leakix"
version = "0.1.10"
description = "Official python client for LeakIX (https://leakix.net)"
authors = ["Danny Willems <danny@leakix.net>"]

[tool.poetry.dependencies]
python = "^3.13"
requests = "*"
l9format = "=1.3.1a3"
fire = ">=0.5,<0.8"

[tool.poetry.group.dev.dependencies]
python-decouple = "*"
pytest = "*"
black = "*"
mypy = "*"
requests-mock = "*"
pylint = "*"
pip-audit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
