[tool.poetry]
name = "leakix"
version = "0.2.0"
description = "Official python client for LeakIX (https://leakix.net)"
authors = [
    "Danny Willems <danny@leakix.net>",
    "Valentin Lobstein <valentin@leakix.net>",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
httpx = "^0.28.0"
l9format = "=1.3.2"
fire = ">=0.5,<0.8"

[tool.poetry.group.dev.dependencies]
python-decouple = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
requests-mock = "*"
ruff = "*"
pip-audit = "*"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Allow percent formatting in example/executable (existing code style)
"example/*.py" = ["UP031"]
"executable/*.py" = ["UP031"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
